# System-Generate-Project

./: CMakeLists.txt  README.md  main.cpp
config/: c++_projects_cmake.sgc
documentation/: code.md  comands.md
include/commands/: commands.hpp
include/excecute/: excecute.hpp
include/exceptions/: exceptions.hpp
include/global/: global.hpp
include/lexer/: lexer.hpp
include/nodos/: nodos.hpp
include/parser/: parser.hpp
include/script/: script.hpp
include/structs/: structs.hpp
libs/: commands.cpp  excecute.cpp  global.cpp  parser.cpp  script.cpp
